package org.launchcode.techjobs_oo;

import java.util.Objects;

public class CoreCompetency extends JobField {
    /*
    private int id;
    private static int nextId = 1;
    private String value;
*/
    public CoreCompetency() {
        super();
        /*
        this.id = nextId;
        nextId++;

         */
    }

    public CoreCompetency(String value) {
        super(value);
        /*
        this();
        this.value = value;

         */
    }

    // Custom toString, equals, and hashCode methods:

    /*
    @Override
    public String toString() {
        return value;
    }

     */

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (!(o instanceof CoreCompetency)) return false;
        CoreCompetency that = (CoreCompetency) o;
        return id == that.id;
    }

    /*
    @Override
    public int hashCode() {
        return Objects.hash(id);
    }

    // TODO: Use the "Generate" (Alt+Insert) tool to add a getter and setter for the 'value' field but
    //  ONLY a getter for the 'id' field.

    public int getId() {
        return id;
    }

    public String getValue() {
        return value;
    }

    public void setValue(String value) {
        this.value = value;
    }

     */
}
