@startuml

skinparam {
    classFontStyle bold
    linetype ortho
}

package org.launchcode.techjobs_oo {
    abstract class JobField {
        # id : int
        # {static} nextId : int = 1
        ..
        # value : String
        __
        + toString() : String
        + hashCode() : int
        .. Getters and Setters ..
        + getId() : int
        + getValue() : String
        + setValue(value : String ) : void
    }

    class Location {
        + Location()
        + Location(value : String)
        ..
        + equals(o : Object) : boolean
    }

    class CoreCompetency {
        + CoreCompetency()
        + CoreCompetency(value : String)
        ..
        + equals(o : Object) : boolean
    }

    class PositionType {
        + PositionType()
        + PositionType(value : String)
        ..
        + equals(o : Object) : boolean
    }

    class Employer {
        + Employer()
        + Employer(value : String)
        ..
        + equals(o : Object) : boolean
    }

    class Job {
        - id : int
        - {static} nextId : int = 1
        ..
        - name : String
        - employer : Employer
        - location : Location
        - positionType : PositionType
        - coreCompetency : CoreCompetency
        __
        + Job()
        + Job(name : String, employer : Employer, location : Location, positionType : PositionType, coreCompetency : CoreCompetency)
        .. Getters and Setters ..
        + getId() : int
        + setName(name : String) : void
        + getName() : void
        + setEmployer(employer : Employer) : void
        + getEmployer() : void
        + setLocation(location : Location) : void
        + getLocation() : void
        + setPositionType(positionType : PositionType) : void
        + getPositionType() : void
        + setCoreCompetency(coreCompetency : CoreCompetency) : void
        + getCoreCompetency() : void
    }
    class Main {
        + {static} main(String[] args) : void
    }

    JobField <|-- Employer
    JobField <|-- Location
    JobField <|-- PositionType
    JobField <|-- CoreCompetency

    Job *-up- Employer
    Job *-up- Location
    Job *-up- PositionType
    Job *-up- CoreCompetency
    Main o-up- Job
}

hide circle
hide empty attributes
@enduml